[tool.poetry]
name = "hw-11-web-api"
version = "0.1.0"
description = ""
authors = ["Vasyl Radashev <vasiliyradashev24@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.112.0"
uvicorn = {extras = ["standard"], version = "^0.30.5"}
sqlalchemy = "^2.0.32"
psycopg2-binary = "^2.9.9"
pydantic = "1.*"
automium-web = "^0.1.1"
schemas = "^0.7.1"
db = "^0.1.1"
crud = "^0.1"
base = "^0.0.0"
passlib = "^1.7.4"
pyjwt = "<2.0.0"
fastapi-jwt-auth = "^0.5.0"
python-multipart = "^0.0.9"
bcrypt = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
